# KTP

./: .gitignore  Product Details_v1.xlsx  app.py  ktp credential.json  modify.py  product_catalogue.py  product_list_change.py  requirements.txt  results.py  scheduler.py  similarity.py  test.py  visualisation.py
backend/: .gitignore  pyproject.toml
backend/app/: config.py  db.py  main.py
backend/app/api/: scenarios.py  schedule.py  tasks.py
backend/app/core/: adapters.py  metrics.py  models.py  scheduler.py  working_hours.py
backend/app/models/: __init__.py  schedule.py  task.py
backend/app/schemas/: schedule.py  task.py
backend/app/services/: scheduling.py
backend/scripts/: import_excel.py
backend/tests/: conftest.py
backend/tests/api/: test_schedule.py  test_tasks.py
backend/tests/core/: test_golden.py  test_scheduler.py  test_working_hours.py
backend/tests/models/: test_schema.py
backend/tests/scripts/: test_import_excel.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: export-button.tsx  floating-window.tsx  gantt-view.tsx  metrics-tiles.tsx  nav.tsx  randomise-button.tsx  scenario-compare.tsx
frontend/src/lib/: api-types.ts  api.ts  config.ts  datetime.ts  excel-chart.ts  excel-export.ts  non-preemptive.ts  scenario-diff.ts  types.ts
frontend/src/types/: frappe-gantt.d.ts
legacy/: app.py  modify.py  product_catalogue.py  product_list_change.py  requirements.txt  results.py  scheduler.py  similarity.py  test.py  visualisation.py
(+14 files in other folders)
